# circuits-zoom-in-fresh-20260325

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  agent.md  pyproject.toml  requirements.txt
.github/workflows/: notebook-ci.yml
artifacts/: m03_feature_catalog.json  m07_tracing_tool_workflow.json  m09_introspection_signals.json  m10_assistant_axis.json  manifest.json
content/: course.json  extensions.json  foundations.json  glossary.json  program.json  reference_outputs.json  self_checks.json
docs/en/: index.md  repo-map.md
docs/zh/: index.md  repo-map.md
examples/en/: reference_artifact_critique.md  reference_experiment_log.md  reference_paper_brief.md  reference_two_week_proposal.md
examples/zh/: reference_artifact_critique.md  reference_experiment_log.md  reference_paper_brief.md  reference_two_week_proposal.md
notebooks/: circuits_zoom_in_en.ipynb  circuits_zoom_in_zh.ipynb
notebooks/en/: m00_vision_circuits.ipynb  m00_zoom_in_circuits.ipynb  m01_toy_models_superposition.ipynb  m02_towards_monosemanticity.ipynb  m03_mapping_the_mind.ipynb  m04_circuit_tracing.ipynb  m04_features_as_classifiers.ipynb  m05_character_control.ipynb  m05_evaluating_feature_steering.ipynb  (+5 more)
scripts/: check_links.py  export_figures.py  generate_course_notebooks.py  generate_figures.py  render_readmes.py  smoke_notebooks.py  validate_course.py
templates/: experiment_log_en.md  experiment_log_zh.md  paper_reading_note_en.md  paper_reading_note_zh.md  research_memo_en.md  research_memo_zh.md
utils/: __init__.py  font.py  viz.py
(+77 files in other folders)
