[project]
name = "circuits-zoom-in"
version = "0.1.0"
description = "A bilingual (Chinese/English) hands-on tutorial reproducing Olah et al. 2020 'Zoom In: An Introduction to Circuits'"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Jonny-English"},
]
keywords = ["mechanistic-interpretability", "neural-circuits", "feature-visualization", "AI-safety", "education"]

dependencies = [
    "torch>=1.12",
    "torchvision>=0.13",
    "torch-lucent>=0.1.8",
    "numpy>=1.21",
    "matplotlib>=3.5",
    "Pillow>=9.0",
]

[project.urls]
Homepage = "https://github.com/Jonny-English/circuits-zoom-in"
Repository = "https://github.com/Jonny-English/circuits-zoom-in"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"
